<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_light">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/london" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_city">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text_title_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/temperature"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- temp -->

                <TextView
                    android:id="@+id/text_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/temp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_temperature" />

                <TextView
                    android:id="@+id/text_temp_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_temp"
                    app:layout_constraintLeft_toRightOf="@+id/text_temp"
                    app:layout_constraintTop_toTopOf="@+id/text_temp"
                    tools:text="10°" />

                <!-- feels_like -->

                <TextView
                    android:id="@+id/text_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/feels_like"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_temp_data" />

                <TextView
                    android:id="@+id/text_feels_like_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_feels_like"
                    app:layout_constraintLeft_toRightOf="@+id/text_feels_like"
                    app:layout_constraintTop_toTopOf="@+id/text_feels_like"
                    tools:text="10°" />

                <!-- temp_min -->

                <TextView
                    android:id="@+id/text_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/temp_min"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_feels_like_data" />

                <TextView
                    android:id="@+id/text_temp_min_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_temp_min"
                    app:layout_constraintLeft_toRightOf="@+id/text_temp_min"
                    app:layout_constraintTop_toTopOf="@+id/text_temp_min"
                    tools:text="10°" />

                <!-- temp_max -->

                <TextView
                    android:id="@+id/text_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/temp_max"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_temp_min_data" />

                <TextView
                    android:id="@+id/text_temp_max_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_temp_max"
                    app:layout_constraintLeft_toRightOf="@+id/text_temp_max"
                    app:layout_constraintTop_toTopOf="@+id/text_temp_max"
                    tools:text="10°" />

                <!-- pressure -->

                <TextView
                    android:id="@+id/text_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/pressure"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_temp_max_data" />

                <TextView
                    android:id="@+id/text_pressure_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_pressure"
                    app:layout_constraintLeft_toRightOf="@+id/text_pressure"
                    app:layout_constraintTop_toTopOf="@+id/text_pressure"
                    tools:text="10°" />

                <!-- humidity -->

                <TextView
                    android:id="@+id/text_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/humidity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_pressure_data" />

                <TextView
                    android:id="@+id/text_humidity_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_humidity"
                    app:layout_constraintLeft_toRightOf="@+id/text_humidity"
                    app:layout_constraintTop_toTopOf="@+id/text_humidity"
                    tools:text="10°" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_temp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text_title_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/wind"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- speed -->

                <TextView
                    android:id="@+id/text_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/speed"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_title_wind" />

                <TextView
                    android:id="@+id/text_speed_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_speed"
                    app:layout_constraintLeft_toRightOf="@+id/text_speed"
                    app:layout_constraintTop_toTopOf="@+id/text_speed"
                    tools:text="10°" />

                <!-- deg -->

                <TextView
                    android:id="@+id/text_deg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/deg"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_speed_data" />

                <TextView
                    android:id="@+id/text_deg_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_deg"
                    app:layout_constraintLeft_toRightOf="@+id/text_deg"
                    app:layout_constraintTop_toTopOf="@+id/text_deg"
                    tools:text="10°" />

                <!-- gust -->

                <TextView
                    android:id="@+id/text_gust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/gust"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_deg_data" />

                <TextView
                    android:id="@+id/text_gust_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_gust"
                    app:layout_constraintLeft_toRightOf="@+id/text_gust"
                    app:layout_constraintTop_toTopOf="@+id/text_gust"
                    tools:text="10°" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>